Update _layout.scss to fix sticky footer on small pages

--- a/sass/layout/_layout.scss
+++ b/sass/layout/_layout.scss
@@ -9,6 +9,7 @@ body {
     "main" 
     "footer";
   align-items: start;
+  min-height: 100vh;
 
   >header {
     grid-area: header;
@@ -26,7 +27,7 @@ body {
 
 
 @if $sticky-header ==true {
-  body > header {
+  body>header {
     position: sticky;
     top: 0;
   }
